tests/valid/valid_unions_enums.csl
config Enums {
  method: "GET" | "POST" | "PUT";
  port_or_name: number | string;
  bool_or_literal: boolean | "verbose";
}
