tests/invalid/invalid_union_literal_with_type.csl
config InvalidUnion {
  log_level: string | "info";
}
